[gd_scene load_steps=7 format=3 uid="uid://dldb3si3d03c6"]

[ext_resource type="Script" uid="uid://dy3kkskaiuxhp" path="res://player/items/stamps/wind/wind.gd" id="1_5g18n"]
[ext_resource type="Texture2D" uid="uid://kquuqgsgm6s8" path="res://icon.svg" id="2_ktvoy"]
[ext_resource type="Shader" uid="uid://b8i35hicopjyu" path="res://player/items/stamps/wind/wind.tres" id="3_bxsw4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vquq1"]
render_priority = 0
shader = ExtResource("3_bxsw4")
shader_parameter/Skew00 = 0.5
shader_parameter/Speed = Vector2(0, 2)
shader_parameter/completude = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ftw8m"]
lightmap_size_hint = Vector2i(23, 16)
material = SubResource("ShaderMaterial_vquq1")
top_radius = 0.7
bottom_radius = 0.4
height = 1.0
radial_segments = 32

[sub_resource type="BoxShape3D" id="BoxShape3D_bxsw4"]

[node name="Wind_Stamp" type="Node3D"]
script = ExtResource("1_5g18n")

[node name="Marca" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
double_sided = false
texture = ExtResource("2_ktvoy")

[node name="Ventos" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48541856, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_ftw8m")

[node name="Timers" type="Node" parent="."]

[node name="Intervalo entre" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Duracao" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Area Efeito" type="Area3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)
collision_layer = 2
gravity_space_override = 3
gravity_point_unit_distance = 23.812
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area Efeito"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_bxsw4")

[connection signal="timeout" from="Timers/Intervalo entre" to="." method="_on_intervalo_entre_timeout"]
[connection signal="timeout" from="Timers/Duracao" to="." method="_on_duracao_timeout"]
[connection signal="body_entered" from="Area Efeito" to="." method="_on_area_efeito_body_entered"]
[connection signal="body_exited" from="Area Efeito" to="." method="_on_area_efeito_body_exited"]
